# paperdigest

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  config.yaml  config.yaml.example  crontab  docker-compose.yml  pyproject.toml  wc
docs/: configuration.md  roadmap.md  scoring.md
docs/plans/: 2026-02-22-llm-filter-rank-design.md  2026-02-22-llm-filter-rank-plan.md  2026-02-22-telegram-digest-design.md  2026-02-22-telegram-digest-plan.md  2026-02-28-index-digests-idempotent-pipeline-design.md  2026-02-28-index-digests-idempotent-pipeline-plan.md
src/paperdigest/: __init__.py  __main__.py  cli.py  config.py  db.py  dedup.py  filter.py  migrate.py  models.py  pdf.py  progress.py  scoring.py  setup.py  summarizer.py  usage.py  web.py
src/paperdigest/collectors/: arxiv.py  base.py  dblp.py  nvidia.py  waymo.py  wayve.py
src/paperdigest/delivery/: markdown.py  telegram.py
src/paperdigest/enrichment/: pwc.py  semantic_scholar.py
src/paperdigest/templates/: digest.md.j2
src/paperdigest/templates/web/: base.html  digest_view.html  index.html  papers.html
tests/: test_config.py  test_db.py  test_dedup.py  test_filter.py  test_models.py  test_progress.py  test_scoring.py  test_setup.py  test_summarizer.py  test_telegram.py
