[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperdigest"
version = "0.1.0"
description = "Automated research paper digest system"
requires-python = ">=3.9"
dependencies = [
    "arxiv>=2.1",
    "requests>=2.31",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "rich>=13.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0", "pymupdf>=1.24"]
web = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "markdown>=3.4"]
dev = ["pytest>=7.0"]

[project.scripts]
paperdigest = "paperdigest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
